# OneClickInstall

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  Dockerfile.build  Dockerfile.dev  LICENSE  OneClickInstall.rc  README.md  autobuild.py  debug.sh  pyproject.toml  resources.qrc  scripts.qrc
.github/scripts/: check-release.sh  create-release.sh  generate-changelog.sh  get-version.sh  run_wine_test.sh
.github/workflows/: build-docker.yml  create-release.yml  docker-publish.yml  e2e-api-test.yml  e2e-frontend-test.yml  e2e-test.yml  release.yml
api/: README.md  server.py
api/auto/: semaphore.py  watcher.py
api/db/: __init__.py  error.py  mysql.py
api/debug/: __init__.py  colorlog.py  middleware.py  watcher.py
api/models/: apps.py  token.py
api/routes/: app_v1.py  download.py  status.py
api/services/: gen_exe.py
api/utils/: patcher.py  token_generate.py
assets/: How_To_Use.html  README.md  index.html
assets/css/: test.css
assets/js/: script.js  test.js
cypress/e2e/: download-test.cy.js  save-file.cy.js
docker/: Dockerfile.mxe  Dockerfile.mxe-gcc  Dockerfile.mxe-qt6  Dockerfile.mxe-qt6-dynamic  Dockerfile.mxe-qt6-shared  Dockerfile.mxe-qt6-static  Dockerfile.qt6.shared-full  Dockerfile.qt6.static-full  README.md
docker/scripts/: compile.sh
docs/: BUILD.md  DEVBUILD.md  DOCKER.md
scripts/: build.sh  compile.sh  healthcheck.py  msi.cmd
scripts/example/: 7z.cmd  firefox.cmd
src/: main.cpp
src/core/: install.cpp  install.h
src/ui/: mainwindow.cpp
src/ui/buttons/: browse.cpp
windows/: README.md  main.cpp
windows/core/: apiclient.cpp  apiclient.h  download.cpp  download.h  install.cpp  install.h  queueddownloader.cpp  queueddownloader.h  run.cpp  run.h
windows/ui/: mainprocess.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_includes.h
windows/ui/actions/: download.cpp
windows/ui/buttons/: browse.cpp  cancel.cpp  download.cpp  info.cpp  install.cpp  source.cpp
windows/utils/: metadata.h
windows/utils/network/: network.cpp  network.h  post.cpp
