[project]
name = "oneclickinstall"
version = "0.0.1"
description = "Software that allows to install Application Automatically"
authors = [
    {name = "Biswajit Das",email = "billionto@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
